# God-knows...

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: fine-tune.md
src/: README.md  backtest.py  config.py  data.py  download.py  feature_head.py  losses.py  main.py  model.py  requirements.txt  train.py
tests/: backtest_sample.py  data_reader.py
