[project]
name = "jane-street-kaggle-analysis"
version = "0.1.0"
description = "Python analysis utilities for Kaggle Jane Street competition datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaggle>=1.7.4.5",
    "pandas>=2.2",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
dev = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pytest>=8.0",
]

[project.scripts]
jane-street-analyze = "jane_street_analysis.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
